--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -31,7 +31,7 @@ const categories = [...new Set(initiatives.map(i => i.data.category))];
         through GitHub contributions.
       </p>
       <div class="mt-4">
-        <a href="https://github.com/yourusername/project2025-tracker" class="bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700">
+        <a href="https://github.com/uhteddy/watch2025.org" class="bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700">
           Contribute on GitHub
         </a>
       </div>
